unpackaged/main/default/objects/ACClabs_Log__c/ACClabs_Log__c.object-meta.xml
<CustomObject>
    <description>Log records generated by custom automations</description>
    <label>ACClabs Log</label>
    <nameField>
        <displayFormat>L-{000000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACClabs Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>