unpackaged/main/default/objects/ACClabs_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>The ID of the record where action occurred, if single record.</description>
    <inlineHelpText>The ID of the record where action occurred, if single record.</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>