unpackaged/main/default/objects/ACClabs_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The source of the log, flow name or otherwise.</description>
    <inlineHelpText>The source of the log, flow name or otherwise.</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>