unpackaged/main/default/objects/ACClabs_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>When the logged action occurred.</description>
    <inlineHelpText>When the logged action occurred.</inlineHelpText>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>