unpackaged/main/default/objects/ACClabs_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User taking action that generated the logged event.</description>
    <inlineHelpText>User taking action that generated the logged event.</inlineHelpText>
    <label>User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>