unpackaged/main/default/objects/ACClabs_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Timestamp__c</columns>
    <columns>Source__c</columns>
    <columns>User__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Log_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>